@@ -33,6 +33,8 @@
       - [ ] v3: sigsegv trap handling
 - [ ] Should find or create a suitable property editor 
 **** TODO Continue Logger in src/logger
+     CLOCK: [2012-03-14 mer. 17:50]--[2012-03-14 mer. 18:33] =>  0:43
+     CLOCK: [2012-03-14 mer. 10:41]--[2012-03-14 mer. 11:17] =>  0:36
      CLOCK: [2012-03-10 sam. 21:23]--[2012-03-10 sam. 21:38] =>  0:15
      CLOCK: [2012-03-10 sam. 19:40]--[2012-03-10 sam. 19:46] =>  0:06
      CLOCK: [2012-03-08 jeu. 11:09]--[2012-03-08 jeu. 12:01] =>  0:52
@@ -105,11 +107,12 @@
 	    And use it in the log_header
       - [X] gettextize invocation
 - [X] May remove some po/ files from SVN
-- [-] May use Boost.Format to get more translatable messages
+- [X] May use Boost.Format to get more translatable messages
       - [X] configure script should test it
       - [X] Add it in DEPENDENCIES and pkg-config file
-      - [ ] see the LoggerOutputTty::logHeader implementation
-	    Why it doesn't work
+      - [X] see the LoggerOutputTty::logHeader implementation
+      - [X] gettext must handle TRANSLATORS comments
+- [ ] Find other translatable strings
 - [ ] Really make translatable strings
 - [ ] May move configure.in DEFUN to m4/
 - [ ] see the log_reader.rb bug about the ErrorTrap#show_dialog cancel
