@@ -1,2 +1,3 @@
 # List of source files which contain translatable strings.
 src/Logger.cpp
+src/LoggerOutputTty.cpp
